Version 2.3.0
=============
 - core: fix CPython implementation TTL parsing issue
 - core: add ability to make queries using the command line
 - core: fix parsing TXT records with invalid UTF-8 chars
 - deps: removed unneeded c-ares files
 - core: update bundled c-ares to 1.13.0
 - ci: fix PyPy in Travis

Version 2.2.0
=============
 - test: fix CNAME test
 - core: parse TTL in PTR replies
 - core: parse PTR aliases
 - doc: fix installation instructions in README
 - doc: fix Channel.set_local_ip documentation
 - core: accept local_ip and local_dev as kwargs
 - ci, misc: add support for CPython 3.6
 - ci: only run CI on master
 - ci: disable some Travis notifications
 - build: add scripts to build manylinux wheels

Version 2.1.1
=============
 - cffi: fix setting nameserver in Channel.__init__
 - doc: update Sphinx configuration so the docs can be built
 - core: backport fix for CVE-2016-5180
 - cffi: fix structure definition
 - ci: use PyPy 5.4.1 when testing on Travis

Version 2.1.0
=============
 - core: fix parsing chunked TXT records

Version 2.0.1
=============
 - core: fix importing from errno submodule

Version 2.0.0
=============
 - doc: fix rst syntax in README
 - sample: fix correctly setting events mask
 - setup.py: mark as executable and add shebang
 - tests.py: assertions moved out of cb so C code cannot discard
 - tests.py: test reverse_address on IPv6 also
 - tests.py: ensure all query results have proper and bound type
 - pycares.c: register result struct-sequences in pycares namespace
 - ci: run tests with PyPy as well
 - ci: run tests on CPython 3.5 on Travis
 - test: moved test file to tests/tests.py
 - test: add Python 3.5 to tox.ini
 - ci: use PyPy 5 in Travis CI
 - build: refactor building bundled c-ares
 - ci: add Python 3.5 to AppVeyor
 - core: reorganize package
 - core: add CFFI core implementation
 - cffi: fix OSX support
 - cffi: fixup FreeBSD support
 - doc: MinGW support got axed
 - doc: update supported Python versions